--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,8 +1,10 @@
 {
+    "id": "/",
     "name": "ByeBoros — Financial Dashboard",
     "short_name": "ByeBoros",
     "description": "Track your finances with ease",
     "start_url": "/",
+    "scope": "/",
     "display": "standalone",
     "background_color": "#f6f8f6",
     "theme_color": "#46ec13",
@@ -12,13 +14,34 @@
             "src": "/icons/icon-192.png",
             "sizes": "192x192",
             "type": "image/png",
-            "purpose": "any maskable"
+            "purpose": "any"
+        },
+        {
+            "src": "/icons/icon-192.png",
+            "sizes": "192x192",
+            "type": "image/png",
+            "purpose": "maskable"
         },
         {
             "src": "/icons/icon-512.png",
             "sizes": "512x512",
             "type": "image/png",
-            "purpose": "any maskable"
+            "purpose": "any"
+        },
+        {
+            "src": "/icons/icon-512.png",
+            "sizes": "512x512",
+            "type": "image/png",
+            "purpose": "maskable"
+        }
+    ],
+    "screenshots": [
+        {
+            "src": "/icons/icon-512.png",
+            "sizes": "512x512",
+            "type": "image/png",
+            "form_factor": "narrow",
+            "label": "ByeBoros Dashboard"
         }
     ]
 }
